# order-book-merger

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
proto/: orderbook.proto
src/: binance.rs  bitstamp.rs  config.rs  main.rs  merge_iter.rs  proto.rs  server.rs
src/binance/: mod.rs  order_book_test.rs  price_level_tests.rs
src/exchanges/: binance.rs  bitstamp.rs
src/order_book/: mod.rs  order_book_test.rs  price_level_tests.rs
src/server/: mod.rs  order_book_merger.rs
