[package]
name = "order-book-merger"
version = "0.0.0"
publish = false
authors = ["cyphersnake <cyphersnake@pm.me>"]
description = "Crate for merging and sorting order books from two exchanges and publishing top bids and asks as a gRPC stream"
edition = "2021"

[dependencies]
envconfig = "0.10.0"
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.12"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = "0.8.4"

[dev-dependencies]
maplit = "1.0.2"
