[package]
name = "order-book-merger"
version = "0.5.0"
publish = false
authors = ["cyphersnake <cyphersnake@pm.me>"]
description = "Crate for merging and sorting order books from two exchanges and publishing top bids and asks as a gRPC stream"
license = "MIT"
edition = "2021"

[dependencies]
async-tungstenite = { version = "0.20.0", features = ["tokio-runtime", "tokio-openssl"] }
envconfig = "0.10.0"
futures-util = "0.3.27"
im = "15.1.0"
itertools = "0.10.5"
prost = "0.11.8"
rust_decimal = "1.29.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
some-to-err = "0.2.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"

[dependencies.merging-iterator]
version = "1.4.0"
git = "https://github.com/cyphersnake/merging-iterator.git"
tag = "v1.4.0-dev" 

[build-dependencies]
tonic-build = "0.8.4"

[dev-dependencies]
maplit = "1.0.2"
tracing-test = "0.2.4"

